0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_a_create_dataset.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_a_create_dataset.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py:


NDDataset creation and plotting example
=======================================
In this example, we create a 3D NDDataset from scratch,
and then we plot one section (a 2D plane)

.. GENERATED FROM PYTHON SOURCE LINES 16-24

Creation
--------
Now we will create a 3D NDDataset from scratch

Data
++++++
here we make use of numpy array functions to create the data for coordinates
axis and the array of data

.. GENERATED FROM PYTHON SOURCE LINES 24-26

.. code-block:: default

    import numpy as np








.. GENERATED FROM PYTHON SOURCE LINES 27-28

As usual, we start by loading the spectrochempy library

.. GENERATED FROM PYTHON SOURCE LINES 28-30

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 31-32

We create the data for the coordinates axis and the array of data

.. GENERATED FROM PYTHON SOURCE LINES 32-42

.. code-block:: default

    c0 = np.linspace(200.0, 300.0, 3)
    c1 = np.linspace(0.0, 60.0, 100)
    c2 = np.linspace(4000.0, 1000.0, 100)
    nd_data = np.array(
        [
            np.array([np.sin(2.0 * np.pi * c2 / 4000.0) * np.exp(-y / 60) for y in c1]) * t
            for t in c0
        ]
    )








.. GENERATED FROM PYTHON SOURCE LINES 43-47

Coordinates
+++++++++++
The `Coord` object allow making an array of coordinates
with additional metadata such as units, labels, title, etc

.. GENERATED FROM PYTHON SOURCE LINES 47-53

.. code-block:: default

    coord0 = scp.Coord(
        data=c0, labels=["cold", "normal", "hot"], units="K", title="temperature"
    )
    coord1 = scp.Coord(data=c1, labels=None, units="minutes", title="time-on-stream")
    coord2 = scp.Coord(data=c2, labels=None, units="cm^-1", title="wavenumber")








.. GENERATED FROM PYTHON SOURCE LINES 54-55

Labels can be useful for instance for indexing

.. GENERATED FROM PYTHON SOURCE LINES 55-58

.. code-block:: default

    a = coord0["normal"]
    print(a)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Coord: [float64] K (size: 1)




.. GENERATED FROM PYTHON SOURCE LINES 59-62

nd-Dataset
+++++++++++
The `NDDataset` object allow making the array of data with units, etc...

.. GENERATED FROM PYTHON SOURCE LINES 62-71

.. code-block:: default

    mydataset = scp.NDDataset(
        nd_data, coordset=[coord0, coord1, coord2], title="Absorbance", units="absorbance"
    )
    mydataset.description = """Dataset example created for this tutorial.
    It's a 3-D dataset (with dimensionless intensity: absorbance )"""
    mydataset.name = "An example from scratch"
    mydataset.author = "Blake and Mortimer"
    print(mydataset)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    NDDataset: [float64] a.u. (shape: (z:3, y:100, x:100))




.. GENERATED FROM PYTHON SOURCE LINES 72-75

We want to plot a section of this 3D NDDataset:

NDDataset can be sliced like conventional numpy-array...

.. GENERATED FROM PYTHON SOURCE LINES 75-77

.. code-block:: default

    new = mydataset[..., 0]








.. GENERATED FROM PYTHON SOURCE LINES 78-79

or maybe more conveniently in this case, using an axis labels:

.. GENERATED FROM PYTHON SOURCE LINES 79-81

.. code-block:: default

    new = mydataset["hot"]








.. GENERATED FROM PYTHON SOURCE LINES 82-84

To plot a dataset, use the `plot` command (generic plot).
As the section NDDataset is 2D, a contour plot is displayed by default.

.. GENERATED FROM PYTHON SOURCE LINES 84-86

.. code-block:: default

    new.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_001.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <_Axes: xlabel='wavenumber $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Absorbance $\\mathrm{/\\ \\mathrm{a.u.}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 87-90

But it is possible to display image

sphinx_gallery_thumbnail_number = 2

.. GENERATED FROM PYTHON SOURCE LINES 90-92

.. code-block:: default

    new.plot(method="image")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_002.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <_Axes: xlabel='wavenumber $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='time-on-stream $\\mathrm{/\\ \\mathrm{min}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 93-94

or stacked plot

.. GENERATED FROM PYTHON SOURCE LINES 94-96

.. code-block:: default

    new.plot(method="stack")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_003.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <_Axes: xlabel='wavenumber $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Absorbance $\\mathrm{/\\ \\mathrm{a.u.}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 97-98

Note that the scp allows one to use this syntax too:

.. GENERATED FROM PYTHON SOURCE LINES 98-100

.. code-block:: default

    scp.plot_stack(new)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_004.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <_Axes: xlabel='wavenumber $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Absorbance $\\mathrm{/\\ \\mathrm{a.u.}}$'>



.. GENERATED FROM PYTHON SOURCE LINES 101-103

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 103-105

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.289 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_a_create_dataset.py <plot_a_create_dataset.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_a_create_dataset.ipynb <plot_a_create_dataset.ipynb>`
